# mechanics

./: .gitmodules  Makefile  README.md
cnc/: animate.sh  ballscrew_mount.scad  concat.sh  cutting_cart.scad  fixed_bearing.scad  fixed_bearings.scad  metal_support.scad  plasma_cnc.scad  sbr_bearing_block.scad  sbr_bearing_blocks.scad  sbr_rail.scad  sbr_rails.scad  sfu1605.scad
cnc/docs/: arc-length.odg
cnc/lib/: ballscrew_mount.scad  ballscrew_mounts.scad  fixed_bearing.scad  fixed_bearing_adapter.scad  fixed_bearings.scad  leg.scad  metal_support.scad  nema23_mount.scad  plate.scad  sbr_bearing_block.scad  sbr_bearing_blocks.scad  sbr_rail.scad  sbr_rails.scad  sfu1605.scad  sfu2005.scad  torch_adapter.scad  torche.scad  torche_adapter.scad  z_axis.scad  z_axis_mounting_plate.scad
cnc/projections/: leg.scad  plate.scad  projections.sh
cnc/projections/scad/: leg.scad  plate.scad  torche_adapter.scad  z_axis_mounting_plate.scad
cnc/render/: animate.sh  render.sh
cross-table/: cross-table.scad
cross-table/electronic/cross-table/: RP-Pico-Libraries  cross-table.kicad_pcb  cross-table.kicad_prl  cross-table.kicad_pro  cross-table.kicad_sch
cross-table/firmware/: .clangd  CMakeLists.txt  README.md  gdb-init
cross-table/firmware/include/cross-table/: buttons.hpp  config.hpp  lcd_display.hpp  lcd_menu.hpp  math_func.hpp  position.hpp  sdcard.hpp  sdcard_reader.hpp  stepper.hpp  switch.hpp
cross-table/firmware/src/: lcd_display.cpp  lcd_menu.cpp  main.cpp  math_func.cpp  sdcard.cpp  sdcard_config.cpp  sdcard_reader.cpp
cross-table/firmware/tests/: test_math_func.cpp  test_position_handler.cpp  test_switch.cpp  unit_test.h
cross-table/hardware/: bom.txt  cross-table.scad
cross-table/hardware/lib/: drill_press_plate.scad  layer_x_connector.scad  layer_y_to_x.scad
cross-table/hardware/projections/: convert.py  projections.sh
cross-table/hardware/projections/scad/: drill_press_plate.scad  layer_y_to_x.scad  profile_connector_E30x150.scad  profile_connector_E60x120.scad
cross-table/lib/: drill_press_plate.scad  layer_x_connector.scad  layer_y_to_x.scad  profile_connector.scad
cross-table/projections/: projections.sh
cross-table/projections/scad/: drill_press_plate.scad  layer_x_connector.scad  layer_y_to_x.scad  profile_connector_E30x120.scad  profile_connector_E30x150.scad  profile_connector_E60x120.scad
ironworks/: brasero.scad  scroll_bender.scad  tripod_plate.scad  wood_router_plate.scad
ironworks/docs/: octagon_inclined_face.odg  octagon_inclined_face.wxmx  quadrant.odg
manual-cutting-table/hardware/: lifting_plate.scad  lifting_plate_connector.scad
manual-cutting-table/hardware/projections/: convert.py  projections.sh
manual-cutting-table/hardware/projections/dxf/: lifting_plate.dxf  lifting_plate_connector.dxf
manual-cutting-table/hardware/projections/scad/: lifting_plate.scad  lifting_plate_connector.scad
scripts/: build-picoprobe.sh  pico-openocd.sh
welding/: welding_cube.scad  welding_table.scad
woodworks/: shutter.scad
